Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62919

When a table has an empty block before it then clicking at the beginning of it will not show the cursor

XMLWordPrintable

    • 79d7487c89aead1a736f75a5fbf8c154c09924e0 (qt/qtbase/5.13)

      When a table has an empty block before it then clicking at the beginning of it will not show the cursor. If you start typing then it will show the cursor, thus indicating that it is possible to type there.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            khormi Kari Hormi
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes